--- a/app/views/colleges/show.html.erb
+++ b/app/views/colleges/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @college.name %></h1>
 <%= link_to "Add a Smack", new_college_smack_path(@college), :class => "button" %>
-<%= link_to "Add a Redemption", new_college_redemption_path(@college),:class => "button" %><br class="clear"/>
+<%= link_to "Add a Redemption", new_college_redemption_path(@college),:class => "button" %>
+<br class="clear"/>
 
 <%= render 'shared/search_fields' %>
 <% unless @posts.empty? %>
