--- a/app/views/smacks/index.html.erb
+++ b/app/views/smacks/index.html.erb
@@ -1,17 +1,11 @@
+<h1><%= @college.name %> Smacks</h1>
+<%= link_to "Add a Smack", new_college_smack_path(@college), :class => "button" %>
+<br class="clear"/>
+<%= render 'shared/search_fields_smacks' %>
 
-<%= render 'shared/masthead1' %>
-	
-		<h1><%= @college.name %> Smacks</h1>
-		<%= render 'masthead'%>
-			<% if signed_in? %>
-		   <%= link_to "Add a Smack", new_user_college_smack_path(@user, @college), :method => :get, :class => "button" %>
-		   <% else %>
-		   <%= link_to "Add a Smack", user_session_path, :method => :get, :class => "button" %>
-			<% end %><br>
-			
-			<%= render 'shared/search_fields_smacks'%>
-			
-		<table class = "post">
-		<%= render :partial => "/posts/post", :collection => @smacks %>
-		</table>
-		<%= will_paginate(@smacks)%>
+<% unless @smacks.empty? %>
+    <%= will_paginate @smacks %>
+    <ul class="posts">
+      <%= render :partial => "/posts/post", :collection => @smacks %>
+    </ul>
+<% end %>
