--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@
   <% if signed_in? %>
       <% if post.user_id == current_user.id || current_user.admin? %>
           <div class="actions">
-            <%= link_to 'Edit', '/smacks/'+post.id.to_s+'/edit', :class => 'button' %>
+            <%= link_to 'Edit', '/'+post.type.downcase+'s/'+post.id.to_s+'/edit', :class => 'button' %>
             <%= link_to image_tag('delete.png'), post, :method => :delete, :confirm => "Delete Post?" %>
           </div>
       <% end %>
