--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,8 @@
   <% unless post.photo_file_name.nil? %>
       <div id="photo_post" class="photo">
         <span class="photo"><%= image_tag(post.photo.url(:large), :id => "large_photo") %></span>
-        <span class="photo"><%= image_tag(post.photo.url(:medium), :id => "small_photo") %></span></div>
+        <span class="photo"><%= image_tag(post.photo.url(:medium), :id => "small_photo") %></span>
+      </div>
   <% end %>
   <div class="content"><%= youtube_embed(post.content).html_safe %></div>
   <div class="comments"><%= post.post_summary %>
