--- a/app/views/user_mailer/support_notification.text.erb
+++ b/app/views/user_mailer/support_notification.text.erb
@@ -1,9 +1,6 @@
-Welcome to campusmack.com, <%= @user.first_name %>
-===============================================
- 
-You have successfully signed up to campusmack.com,
-your username is: <%= @user.username %>.
- 
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+Sender Name: <%= @support.sender_name%>
+Sender Email: <%= @support.email %>
+Type of Message: <%= @support.support_type%>
+
+Message: <%= @support.content %>
+
