Removed gray area from bottom.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,12 @@
     <%= yield(:below) %>
   </div>
 </div>
-
-<div id="footer" class="large">
-  <div class="container"></div>
-  <br class="clear"/>
-</div>
-
+<% if false %>
+    <div id="footer" class="large">
+      <div class="container"></div>
+      <br class="clear"/>
+    </div>
+<% end %>
 <div id="copyright">
   <div class="container">
     <div class="copyright">
