--- a/app/views/support/_form.html.erb
+++ b/app/views/support/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @support, :url => { :action => "create" }, :html => { :method => :post } do |f| %>
+<% form_for @support, :url => { :action => 'create' } do |f| %>
 <div class="field">
     <%= f.label "Name:" %>
     <%= f.text_field :sender_name %>
