--- a/app/views/user_mailer/support_notification.html.erb
+++ b/app/views/user_mailer/support_notification.html.erb
@@ -4,6 +4,6 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-	<%= @sender.content %>
+	<%= @support.content %>
   </body>
 </html>
