--- a/app/views/support/_form.html.erb
+++ b/app/views/support/_form.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="field">
     <%= f.label "Type:" %>
-    <%= f.select :support_type, options_for_select(["Feedback", "Question", "Other"]) %>
+    <%= f.select :support_type, options_for_select(["Feedback", "Question", "Bug", "Other"]) %>
 </div>
 <div class="field">
     <%= f.label "Comments:" %>
