--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -845,7 +845,7 @@ span.vote {
     padding-top: 80px;
 }
 
-<<<<<<< HEAD
+
 /* New Posts */
 li#video_field {display:none;}
 li#photo_field {display:none;}
@@ -857,7 +857,7 @@ li#news_field {display:none;}
 
 #photo-close span { float: right; }
 
-=======
+
 #wrapper {
     position: relative;
     min-height: 100%;
@@ -868,4 +868,8 @@ li#news_field {display:none;}
 
 .field_with_errors {display:inline;}
 .field_with_errors .message {color: #c81419; font-size: 85%}
->>>>>>> b79f58bb0cdc89a0ad3d39eb72adeecf4d520801
+
+#error_explanation {width:  400px;border:  2px solid red;padding:  7px; padding-bottom:  12px;margin-bottom:  20px;background-color: #f0f0f0; }
+#error_explanation h2 { text-align: left; font-weight: bold; padding: 5px 5px 5px 15px; font-size: 12px; margin: -7px; background-color: #c00; color: #fff; }
+#error_explanation p { color: #333; margin-bottom: 0; padding: 5px;}
+#error_explanation ul li { font-size: 12px; list-style: square;}
