--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
 		<a class="photo" href="<%= post.photo.url(:large) %>"><img src="<%= post.photo.url(:medium) %>" alt=""/></a>
       </div>
   <% end %>
-  <div class="content"><%= youtube_embed(post.content).html_safe %></div>
+  <div class="content"><%= youtube_embed(post.content) %></div>
   <div class="comments"><%= post.post_summary %>
     <% if !post.post_summary.nil? && !request.fullpath.include?("posts") %>
         <%= link_to " [more...]", "/colleges/#{post.college_id}/posts/#{post.id}" %>
@@ -19,17 +19,7 @@
           </div>
       <% end %>
   <% end %>
-  <div class="vote">
-    <% if signed_in? %>
-        <span class="vote"><%= link_to image_tag('arrow-up.png'), vote_up_post_path(post), :method => :post, :remote => true %></span><br/>
-        <!-- votes_for_b is in posts_helper-->
-        <span class="vote" id="<%= "vote_count_up"+ post.id.to_s %>"><%= post.votes_for_b %></span><br/>
-        <span class="vote"><%= link_to image_tag('arrow-down.png'), vote_down_post_path(post), :method => :post, :remote => true %></span>
-    <% else %>
-        <span class="vote"><%= post.votes_for_b %></span>
-    <% end %>
-  </div>
-  <div id="<%= "vote_count_down"+ post.id.to_s %>" class="vote count" width=5%><%= post.votes_against_b %></div>
+  <%= vote_buttons(post) %>
   <br class="clear"/>
 
   <div class="timestamp">
