--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,43 @@
 <h1><%= @post.title %></h1>
-
-<ul class="posts">
-  <%= render :partial => "/posts/post", :object => @post %>
-</ul>
-<% if signed_in? %>
-    <%= form_for [@post, Comment.new], :remote => true do |f| %>
-        <%= render '/shared/comments', :f => f %>
+<div class="post">
+  <div class="top">
+    posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.try(:username) %>.
+    <%= vote_buttons(@post, :small) %>
+    <% if can? :edit, @post %>
         <div class="actions">
-          <%= f.submit "Submit Comment" %>
+          <%= link_to 'Edit', '/'+@post.type.downcase+'s/'+@post.id.to_s+'/edit', :class => 'button' %>
+          <%= link_to image_tag('delete.png'), @post, :method => :delete, :confirm => "Delete Post?" %>
         </div>
     <% end %>
-<% end %>
-<h2>Comments:</h2>
-<%= will_paginate(@comments) %>
-<table class="comments">
-  <tbody>
-  <%= render :partial => @post.comments %>
-  </tbody>
-</table>
+    <br class="clear"/>
+  </div>
 
+  <% unless @post.photo_file_name.nil? %>
+      <div class="photo">
+        <img src="<%= @post.photo.url(:large) %>" alt=""/>
+      </div>
+  <% end %>
+  <div class="content"><%= youtube_embed(@post.content, true) %></div>
+  <div class="comments"><%= @post.post_summary %>
+    <% if !@post.post_summary.nil? && !request.fullpath.include?("posts") %>
+        <%= link_to " [more...]", "/colleges/#{@post.college_id}/posts/#{@post.id}" %>
+    <% end %>
+  </div>
+  <br class="clear"/>
 
+  <% if signed_in? %>
+      <%= form_for [@post, Comment.new], :remote => true do |f| %>
+          <%= render '/shared/comments', :f => f %>
+          <div class="actions">
+            <%= f.submit "Submit Comment" %>
+          </div>
+      <% end %>
+  <% end %>
+  <h2>Comments:</h2>
+  <%= will_paginate(@comments) %>
+  <table class="comments">
+    <tbody>
+    <%= render :partial => @post.comments %>
+    </tbody>
+  </table>
+</div>
