--- a/app/views/shared/_fields.html.erb
+++ b/app/views/shared/_fields.html.erb
@@ -33,7 +33,7 @@
 	<li>
 		<div class="field">
 			<%= f.label :post_summary %><br />
-			<%= f.text_area :post_summary %> 
+			<%= f.text_area :post_summary, :class => "comment"  %> 
 		</div>
 	</li>	
 
