--- a/app/views/support/_form.html.erb
+++ b/app/views/support/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label "Comments:" %>
 </div>
 <div class="field">
-    <%= f.text_area :content %>
+    <%= f.text_area :content, :class => "comment"  %>
  </div>
     <%= f.submit "Submit" %>
 <% end %>
