--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -880,3 +880,5 @@ div.post .vote span {
 div.post .actions {
     float: right;
 }
+
+textarea.comment { width: 500px; height: 100px; border: 3px solid #cccccc; padding: 5px;}
