--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <div id="wrapper">
   <header>
     <div class="container">
-      <a href="/" class="marketplace"><h2>Campusmack</h2></a>
+      <a href="/" class="sitename"><h2>Campusmack</h2></a>
       <%= user_nav %>
       <ul class="info-nav">
         <li><a href="/help">Help</a></li>
