--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<h1><%= @college.name %></h1>
 <%= render :partial => 'colleges/masthead' %>
 <br class="clear"/>
 <%= form_for @search, :url => posts_path, :html => {:method => :get} do |f| %>
@@ -6,8 +7,8 @@
     <%= f.submit "Go!", :name =>nil %>
 <% end %>
 <% unless @posts.empty? %>
-<ul class="posts">
-  <%= render :partial => "/posts/post", :collection => @posts %>
-</ul>
-<%= will_paginate(@posts) %>
+    <ul class="posts">
+      <%= render :partial => "/posts/post", :collection => @posts %>
+    </ul>
+    <%= will_paginate(@posts) %>
 <% end %>
