--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
 <div class="post">
   <div class="top">
     posted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.try(:username) %>.
+    <%= render :partial => 'shared/addthis' %>
     <%= vote_buttons(@post, :small) %>
     <% if can? :edit, @post %>
         <div class="actions">
