--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,6 +6,7 @@
       </div>
   <% end %>
   <div class="content"><%= youtube_embed(post.content) %></div>
+  <%= link_to "News post", post.news if post.news %>
   <div class="comments"><%= post.post_summary %>
     <% if !post.post_summary.nil? && !request.fullpath.include?("posts") %>
         <%= link_to " [more...]", "/colleges/#{post.college_id}/posts/#{post.id}" %>
