--- a/app/views/colleges/_masthead.html.erb
+++ b/app/views/colleges/_masthead.html.erb
@@ -1,7 +1,7 @@
 <ul class="masthead">
   <li><%= link_to "Videos", college_videos_path(@college) %></li>
   <li><%= link_to "Photos", college_photos_path(@college) %></li>
-  <li><%= link_to "News" %></li>
-  <li><%= link_to "Stats" %></li>
+  <li><%= link_to "News" , college_news_index_path(@college) %></li>
+  <li><%= link_to "Stats", college_stats_path(@college) %></li>
 </ul>
 
