--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<li id="post_<%= post.id %>">
+<li id="post_<%= post.id %>" class="<%= post.type.downcase %>">
   <h4><%= link_to post.title, "/colleges/#{post.college_id}/posts/#{post.id}" %></h4>
   <% unless post.photo_file_name.nil? %>
       <div id="photo_post" class="photo">
