--- a/app/views/redemptions/index.html.erb
+++ b/app/views/redemptions/index.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @college.name %> Redemptions</h1>
-<%= render :partial => 'colleges/masthead' %>
+<ul class="masthead">
+  <li><%= link_to "Videos", videos_college_redemptions_path(@college) %></li>
+  <li><%= link_to "Photos", photos_college_redemptions_path(@college) %></li>
+  <li><%= link_to "News", news_college_redemptions_path(@college) %></li>
+  <li><%= link_to "Stats", stats_college_redemptions_path(@college) %></li>
+</ul>
 <%= link_to "Add a Redemption", new_college_redemption_path(@college), :class => "button" %>
 <br class="clear"/>
 <%= render 'shared/search_fields_redemptions' %>
